style(frontend): fix moving elements of a popup component
caused by solution of preventing scrollbar change the width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,13 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-   width: 100vw;
-   overflow-x: hidden;
-}
-
 body {
   font-family: "Poppins", serif;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 @layer base {
